--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora</title>
 </head>
 <body>
-    
+    <form>
+        Numero 1: <input type="text" name="numero1">
+        Numero 2: <input type="text" name="numero2">
+        Result: <input type="text" name="resultado">
+    </form>
+
 </body>
 </html>
