--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <form>
         Numero 1: <input type="text" name="numero1">
         Numero 2: <input type="text" name="numero2">
-        Result: <input type="text" name="resultado">
+        Result: <input type="text" name="resultado"><br>
+        <input type="button" value="+">
+
     </form>
 
 </body>
